# -MCP-Agent

./: .gitignore  CLAUDE.md  MEMORY_MANAGEMENT_GUIDE.md  MULTI_CHAIN_GUIDE.md  PROJECT_STRUCTURE.md  README.md  TASK_COMPLEXITY_ANALYZER.md  demo_complexity_analyzer.py  eight_agent.py  memory_cli.py  memory_web.py  minimal_main.py  pyproject.toml  requirements.txt  setup.py  test.py  test_structure_agent.py  终端存储的输出.txt  项目汇报文档.md
.augment/rules/: Agent连接MCP说明.md  LLM API 配置说明.md  代码编写要求.md  基于MCP的多链代码生成Agent开发项目说明.md
Report/: 任务账本.md  刘继君简历.docx  增强指令.md  扫描报告.md
docs/: MCP.txt
docs/api/: Assistant.py
exports/: memories_export_20250801_211737.json
mcp_services/code_scanner_mcp/: README.md  install.py  pyproject.toml  start_server.py
mcp_services/code_scanner_mcp/src/code_scanner_mcp/: __init__.py  analyzers.py  report_generator.py  server.py
memory/agent_states/: CodeGenerationAgent_state.json  CodeScanningAgent_state.json  MemoryTestAgent_state.json  PlanningAgent_state.json  ProjectStructureAgent_state.json  RefactoringAgent_state.json  ReflectionAgent_state.json  TestAgent_state.json  UnitTestAgent_state.json
memory/execution_logs/: chroma.sqlite3
memory/tmp2/: chroma.sqlite3
memory/workflow_patterns/: chroma.sqlite3
scripts/: git-maintenance.sh
src/: __init__.py  main.py
src/agents/: __init__.py  chain_factory.py  coding_agent.py  planning_agent.py  (+6 more)
文档/: Agent_Memory_白皮书.md  AssistantAgent_设计白皮书.md  ChromaDB_向量数据库.md  MagenticOne_思想与本项目应用.md  RL_Agent_基础与本项目应用.md  ppt_功能演示清单.md  上下文管理.md  功能演示清单.md  向量数据库_基础知识.md  课题总结 8.7.md  面试问题.md
(+27 files in other folders)
